<resources>
    <string name="app_name">SquadMe</string>
    <string-array name="positions">
        <item>Portero</item>
        <item>Defensa</item>
        <item>Mediocentro</item>
        <item>Delantero</item>
    </string-array>
    <string-array name="formation">
        <item>4-3-3</item>
        <item>4-4-2</item>
        <item>3-4-3</item>
    </string-array>
    <string name="match_menu">Partidos</string>
    <string name="player_menu">Jugadores</string>
    <string name="squad_menu">Alineaciones</string>
    <string name="training_menu">Entrenamientos</string>
    <string name="profile_menu">Perfil</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="password_reset">Olvidé mi contraseña</string>
    <string name="login_btn">Login</string>
    <string name="to_register">¿No tiene cuenta? Registrate</string>
    <string name="error_login">No se puedo loguear al usuario</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="nacionality">Nacionalidad</string>
    <string name="team">Equipo</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="register">Registro</string>
    <string name="oponent_match_creation">Oponente</string>
    <string name="date_match_creation">Fecha</string>
    <string name="hour_match_creation">Hora</string>
    <string name="lineUp_match_creation">Elige una plantilla</string>
    <string name="oponent_match_detail">Oponente:</string>
    <string name="date_match_detail">Fecha:</string>
    <string name="hour_match_detail">Hora:</string>
    <string name="name_player_creation">Nombre</string>
    <string name="surname_player_creation">Apellido</string>
    <string name="email_player_creation">Email</string>
    <string name="nacionality_player_creation">Nación</string>
    <string name="position_player_creation">Posición</string>
    <string name="password_player_creation">Contraseña</string>
    <string name="numberText_player_creation">Dorsal</string>
    <string name="photoCamera">Foto</string>
    <string name="editCamera">Editar</string>
    <string name="name_player">Nombre:</string>
    <string name="surname_player">Apellido:</string>
    <string name="email_player">Email:</string>
    <string name="nacionality_player">Nacionalidad:</string>
    <string name="position_player">Posición:</string>
    <string name="team_player">Equipo:</string>
    <string name="number_player">Dorsal:</string>
    <string name="goal_player">Goles</string>
    <string name="assits_player">Asistencias</string>
    <string name="yellow_player">Amarillas</string>
    <string name="red_player">Rojas</string>
    <string name="squad_name_creation">Nombre</string>
    <string name="squad_formation_creation">Formación</string>
    <string name="squad_lineUp_player_creation">Escoge los jugadores</string>
    <string name="squad_players_counter_creation">0/11 jugadores seleccionados</string>
    <string name="training_date_creation">Fecha</string>
    <string name="training_hour_creation">Fecha</string>
    <string name="training_addExercises_creation">Agregar Ejercicios</string>
    <string name="traininig_exercisesAdded_creation">Ejercicios añadidos: </string>
    <string name="training_date_detail">Fecha Entreno:</string>
    <string name="training_hour_detail">Hora:</string>
    <string name="training_state_detail">Estado:</string>
    <string name="training_listExercises_detail">Lista de Ejercicios:</string>
    <string name="training_state_update">Entrenamiento Completado:</string>
    <string name="profile_name">Nombre: </string>
    <string name="profile_surname">Apellido: </string>
    <string name="profile_email">Email: </string>
    <string name="profile_nacionality">Nacionalidad: </string>
    <string name="profile_rol">Rol:</string>
    <string name="reset_password_text">Introduce tu email, para enviarte un enlace al email introducido para cambiar/restablecer la contraseña</string>
    <string name="reset_password_email">Email</string>
    <string name="reset_password_btn">Enviar al correo</string>
    <string name="cancel_btn">Cancelar</string>
    <string name="create_btn">Crear</string>
    <string name="update_btn">Actualizar</string>
    <string name="edit_btn">Editar</string>
    <string name="delete_btn">Eliminar</string>
    <string name="session_btn">Cerrar Sesión</string>
    <string name="password_btn">Cambiar Contraseña</string>
    <string name="toast_error_password_mismatch">Las contraseñas no coinciden</string>
    <string name="toast_doc_notExist">El documento no existe</string>
    <string name="toast_error_user">Error al obtener los datos del usuario</string>
    <string name="toast_error_user_register">Rellene bien los campos</string>
    <string name="toast_error_user_register2">Erro al registra un usuario</string>
    <string name="toast_error_user_register_empty_values">Por favor, complete todos los campos</string>
    <string name="toast_error_email_empty">Error, email sin rellenar</string>
    <string name="toast_send_email">Correo de cambio de contraseña enviado</string>
    <string name="toast_error_rese_password_process_ended">Error, no se pudo completar el proceso, introduzca bien el email</string>
    <string name="toast_error_no_connection_createMatch">No hay conexión a Internet. No se puede crear el partido.</string>
    <string name="select_lineUp_macth">Selecciona una alineación.</string>
    <string name="dialog_match_lineUp">Seleccionar Alineación</string>
    <string name="dialog_match_lineUp_positive_btn">Ok</string>
    <string name="dialog_match_lineUp_negative_btn">Cancelar</string>
    <string name="toast_empty_oponent_value">Por favor, ingrese un nombre para el partido.</string>
    <string name="toast_empty_lineUp_value">Por favor, seleccione una alineación.</string>
    <string name="toast_match_create">Partido creado exitosamente</string>
    <string name="toast_match_create_error">Error al crear el partido</string>
    <string name="match_detail_oponent_text">Oponente: </string>
    <string name="match_detail_result_text">Resultado: </string>
    <string name="match_detail_date_text">Fecha: </string>
    <string name="match_detail_state_non_completed">Estado: No Completado</string>
    <string name="match_detail_state_completed">Estado: Completado</string>
    <string name="toast_error_no_connection_editMatch">No hay conexión a Internet. No se puede editar el partido.</string>
    <string name="toast_error_no_completed_match_delete">No puedes eliminar un partido no completado</string>
    <string name="toast_error_no_connection_deleteMatch">No hay conexión a Internet. No se puede eliminar el partido.</string>
    <string name="toast_match_delete">Partido eliminado exitosamente</string>
    <string name="toast_match_delete_error">Error al eliminar el partido</string>
    <string name="toast_no_permissions_edit_match">No tienes permiso para editar un partido.</string>
    <string name="toast_no_connection_match_detail">No hay conexión a Internet</string>
    <string name="toast_no_permissions_delete_match">No tienes permiso para borrar un partido.</string>
    <string name="toast_no_permissions_create_match">No tienes permiso para crear un partido.</string>
    <string name="toast_match_update">Partido actualizado exitosamente</string>
    <string name="toast_match_update_error">Error al actualizar el partido</string>
    <string name="toast_error_player_values_empty">Por favor, complete todos los campos</string>
    <string name="toast_error_player_img_notUpload">Error al subir la imagen</string>
    <string name="toast_player_create">Jugador creado exitosamente</string>
    <string name="toast_player_create_error">Error al crear el jugador</string>
    <string name="toast_player_error_register">Error al registrar el jugador: Usuario no encontrado</string>
    <string name="toast_player_error_register_login_as_coach">Error al registrar el jugador: Usuario no encontrado</string>
    <string name="toast_error_no_connection_createPlayer">No hay conexión a Internet. No se puede crear el jugador.</string>
    <string name="player_detail_name_text">Nombre: </string>
    <string name="player_detail_surname_text">Apellido: </string>
    <string name="player_detail_email_text">Email: </string>
    <string name="player_detail_nacionality_text">Nacionalidad: </string>
    <string name="player_detail_team_text">Equipo: </string>
    <string name="player_detail_position_text">Posición: </string>
    <string name="player_detail_number_text">Dorsal: </string>
    <string name="toast_player_delete">Jugador eliminado exitosamente</string>
    <string name="toast_player_delete_error">No se pudo eliminar el jugador</string>
    <string name="toast_error_no_connection_deletePlayer">No hay conexión a Internet. No se puede eliminar el jugador.</string>
    <string name="toast_error_no_connection_editPlayer">No hay conexión a Internet. No se puede editar el jugador.</string>
    <string name="toast_error_load_playerList_cache">No se pudieron cargar los datos desde la caché</string>
    <string name="toast_error_no_perimissions_createPlayer">No tienes permiso para crear un jugador.</string>
    <string name="error_toast_not_galery_access">No se pudo acceder a la galería</string>
    <string name="toast_player_update">Jugador actualizado exitosamente</string>
    <string name="toast_player_update_error">Error al actualizar el jugador</string>
    <string name="toast_no_permissions_edit_player">No tienes permiso para editar un jugador.</string>
    <string name="toast_no_permissions_delete_player">No tienes permiso para borrar un jugador.</string>
    <string name="toast_error_no_connection_createSquad">No hay conexión a Internet. No se puede crear una plantilla.</string>
    <string name="player_creation_squads">/11 jugadores seleccionados</string>
    <string name="dialog_title_create_squad">Selecciona los jugadores</string>
    <string name="dialog_squad_positive_btn">Ok</string>
    <string name="dialog_squad_negative_btn">Cancelar</string>
    <string name="toast_error_empty_name_squad_value">Por favor, Ingrese un nombre para la plantilla</string>
    <string name="toast_error_empty_formation_squad_value"> Por favor, seleccione una formación.</string>
    <string name="toast_error_empty_11players_squad_value">Debe seleccionar exactamente 11 jugadores.</string>
    <string name="toast_squad_create">Plantilla creada exitosamente</string>
    <string name="toast_squad_create_error">Error al crear la plantilla</string>
    <string name="toast_error_no_connection_deleteSquad">No hay conexión a Internet. No se puede eliminar la plantilla.</string>
    <string name="toast_squad_delete">Plantilla eliminada exitosamente</string>
    <string name="toast_squad_delete_error">No se pudo eliminar la plantilla</string>
    <string name="toast_error_load_squadList_cache">No se pudieron cargar los datos desde la caché</string>
    <string name="toast_squad_update">Plantilla actualizado exitosamente</string>
    <string name="toast_squad_update_error">Error al actualizar la plantilla</string>
    <string name="toast_squad_no_permissions_create_squad">No tienes permiso para crear un una plantilla.</string>
    <string name="toast_error_no_connection_editSquad">No hay conexión a Internet. No se puede editar la plantilla.</string>
    <string name="toast_error_no_connection_createTraining">No hay conexión a Internet. No se puede crear un entreno.</string>
    <string name="dialog_title_create_training">Añadir Ejercicio</string>
    <string name="dialog_training_positive_btn">Agregar</string>
    <string name="dialog_training_negative_btn">Cancelar</string>
    <string name="toast_error_non_exercise_added">Por favor,Ingrese un ejercicio</string>
    <string name="text_exercises_added">Ejercicios añadidios:</string>
</resources>