<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity.players.playerUpdate.PlayerUpdateFragment">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="220dp"
        android:layout_height="112dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <Button
        android:id="@+id/editImage_btn"
        android:layout_width="119dp"
        android:layout_height="53dp"
        android:layout_marginTop="52dp"
        android:drawableLeft="@drawable/camera"
        android:text="@string/editCamera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/photo"
        app:layout_constraintTop_toTopOf="parent"></Button>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_label"
        android:layout_width="304dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:hint="@string/name_player_creation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surname_label"
        android:layout_width="304dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:hint="@string/surname_player_creation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surname_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nation_label"
        android:layout_width="304dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:hint="@string/nacionality_player_creation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nation_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <NumberPicker
        android:id="@+id/number"
        android:layout_width="105dp"
        android:layout_height="82dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nation_label"></NumberPicker>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/position_label"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="172dp"
        android:layout_height="67dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="52dp"
        android:hint="@string/position_player_creation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nation_label">

        <AutoCompleteTextView
            android:id="@+id/position_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none">

        </AutoCompleteTextView>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/dorsal_txt"
        android:layout_width="118dp"
        android:layout_height="25dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:text="@string/numberText_player_creation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nation_label">

    </TextView>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="56dp"
        android:padding="16dp"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/position_label">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Celda 1 -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/goal_player"/>

            <!-- Celda 2 -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/assits_player" />

            <!-- Celda 3 -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/yellow_player" />

            <!-- Celda 4 -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/red_player" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <!-- NumberPicker para Goles -->
            <NumberPicker
                android:id="@+id/goles"
                android:layout_width="0dp"
                android:layout_height="50dp" />

            <!-- NumberPicker para Asistencias -->
            <NumberPicker
                android:id="@+id/asistenciasPicker"
                android:layout_width="0dp"
                android:layout_height="50dp" />

            <!-- NumberPicker para Amarillas -->
            <NumberPicker
                android:id="@+id/amarillasPicker"
                android:layout_width="0dp"
                android:layout_height="50dp" />

            <!-- NumberPicker para Rojas -->
            <NumberPicker
                android:id="@+id/rojasPicker"
                android:layout_width="0dp"
                android:layout_height="50dp" />
        </TableRow>


    </TableLayout>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="36dp"
        android:text="@string/cancel_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"></Button>

    <Button
        android:id="@+id/editar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/update_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"></Button>


</androidx.constraintlayout.widget.ConstraintLayout>