<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity.matches.matchesCreation.MatchCreationFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/opponent_label"
        android:layout_width="249dp"
        android:layout_height="59dp"
        android:hint="@string/oponent_match_creation"
        app:layout_constraintBottom_toTopOf="@+id/Cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.173">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/opponent_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="68dp"
        android:text="@string/date_match_creation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opponent_label">

    </Button>

    <Button
        android:id="@+id/btnHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="60dp"
        android:text="@string/hour_match_creation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFecha">

    </Button>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/spinnerTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/borde_spinner"
        android:hint="@string/lineUp_match_creation"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTHora" />

    <Button
        android:id="@+id/Crear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="96dp"
        android:text="@string/create_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/Cancelar"></Button>

    <Button
        android:id="@+id/Cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="96dp"
        android:text="@string/cancel_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </Button>

    <EditText
        android:id="@+id/editTextFecha"
        android:layout_width="233dp"
        android:layout_height="49dp"
        android:layout_marginTop="68dp"
        android:inputType="text"
        android:text="@string/date_match_creation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.282"
        app:layout_constraintStart_toEndOf="@+id/btnFecha"
        app:layout_constraintTop_toBottomOf="@+id/opponent_label" />

    <EditText
        android:id="@+id/editTextTHora"
        android:layout_width="225dp"
        android:layout_height="49dp"
        android:layout_marginTop="56dp"
        android:inputType="text"
        android:text="@string/hour_match_creation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toEndOf="@+id/btnHora"
        app:layout_constraintTop_toBottomOf="@+id/editTextFecha" />

</androidx.constraintlayout.widget.ConstraintLayout>